--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 build
+dist/
 
 # Dependency directories
 node_modules/
