--- a/package.json
+++ b/package.json
@@ -27,17 +27,16 @@
   "homepage": "https://github.com/eram/ts-fsm#readme",
   "scripts": {
     "build": "npm run lint && tsc --pretty",
-    "test": "eslint --color src/**/*.ts && jest --coverage --silent",
+    "test": "eslint --color src/**/*.ts && jest --coverage",
     "clean": "rimraf coverage *.log logs dist coverage",
     "lint": "eslint --color --fix src/**/*.ts && echo Lint complete.",
     "jest": "jest --watch"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.19.0",
+    "eslint": "^6.0.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.22.1",
@@ -46,6 +45,6 @@
     "jest": "^27.4.4",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.1",
-    "typescript": "^3.9.10"
+    "typescript": "^5.1.3"
   }
 }
