remove private from package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ts-fsm",
   "version": "1.2.0",
-  "description": "finite state machine using promises",
+  "description": "finite state machine with async callbacks",
   "main": "./dist/stateMachine.js",
   "typings": "./dist/stateMachine.d.ts",
-  "private": "false",
   "keywords": [
     "fsm",
     "state-machine",
