--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-fsm",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "finite state machine with async callbacks",
   "main": "./dist/stateMachine.js",
   "typings": "./dist/stateMachine.d.ts",
@@ -19,7 +19,7 @@
     "node": ">=14"
   },
   "author": "eram@weblegions.com",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/eram/typescript-fsm/issues"
   },
@@ -33,14 +33,14 @@
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^6.0.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-plugin-sonarjs": "^0.23.0",
     "jest": "^29.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.0",
