--- a/package.json
+++ b/package.json
@@ -29,21 +29,22 @@
     "test": "eslint --color src/**/*.ts && jest --coverage",
     "clean": "rimraf coverage *.log logs dist coverage",
     "lint": "eslint --color --fix src/**/*.ts && echo Lint complete.",
-    "jest": "jest --watch"
+    "jest": "jest --watch",
+    "diagram": "npx tsx ./tools/GenerateDiagram.ts"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-sonarjs": "^0.23.0",
-    "jest": "^29.0.0",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.0",
-    "typescript": "^5.1.3"
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.19.2",
+    "typescript": "5.5.4"
   }
 }
