--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   jest:
-    name: Run jest tests
+    name: Run Jest tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
-      - name: Run ESLint
+      - name: Run Jest
         run: npm run test
