--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-fsm",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "description": "finite state machine with async callbacks",
   "main": "./dist/stateMachine.js",
   "typings": "./dist/stateMachine.d.ts",
@@ -16,7 +16,7 @@
     "url": "https://github.com/eram/typescript-fsm.git"
   },
   "engine": {
-    "node": ">=14"
+    "node": ">=20"
   },
   "author": "eram@weblegions.com",
   "license": "Apache 2.0",
@@ -26,13 +26,13 @@
   "homepage": "https://github.com/eram/typescript-fsm#readme",
   "scripts": {
     "build": "npm run lint && tsc --pretty",
-    "test": "eslint --color src/**/*.ts && jest --coverage",
+    "test": "eslint --color src/**/*.ts && node --test",
     "clean": "rimraf coverage *.log logs dist coverage",
     "lint": "eslint --color --fix src/**/*.ts && echo Lint complete.",
-    "jest": "jest --watch"
+    "watch": "node --watch --test"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
+    "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
@@ -41,9 +41,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-sonarjs": "^0.23.0",
-    "jest": "^29.0.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.0",
     "typescript": "^5.1.3"
   }
 }
