--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/eram/typescript-fsm.git"
+    "url": "git+https://github.com/eram/typescript-fsm.git"
   },
   "engine": {
     "node": ">=20"
